@@ -6,6 +6,7 @@ Changelog for HybridAuth.
 
 0.6.0 pl
 ==============
+- Replaced file "action.php" to plugin "HybridAuth".
 - Added ability to disable new user registrations. See system setting "ha.register_users".
 - [#3] Fixed "No foreign key definition for parentClass: modUser using relation alias: Services" log entries.
 - Added new providers: "Draugiem" and "Xing".
